--- a/mini-lisp.vcxproj.filters
+++ b/mini-lisp.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="eval_env.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="builtin.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="error.h">
@@ -54,6 +57,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="eval_env.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="builtin.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
