--- a/mini-lisp.vcxproj.filters
+++ b/mini-lisp.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="builtin.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="forms.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="error.h">
@@ -60,6 +63,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="builtin.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="forms.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="utils.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
