--- a/mini-lisp.vcxproj
+++ b/mini-lisp.vcxproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <ClCompile Include="builtin.cpp" />
     <ClCompile Include="eval_env.cpp" />
+    <ClCompile Include="forms.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="parser.cpp" />
     <ClCompile Include="token.cpp" />
@@ -90,10 +91,12 @@
     <ClInclude Include="builtin.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="eval_env.h" />
+    <ClInclude Include="forms.h" />
     <ClInclude Include="parser.h" />
     <ClInclude Include="token.h" />
     <ClInclude Include="tokenizer.h" />
     <ClInclude Include="rjsj_test.hpp" />
+    <ClInclude Include="utils.hpp" />
     <ClInclude Include="value.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
