--- a/mini-lisp.vcxproj
+++ b/mini-lisp.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="builtin.cpp" />
     <ClCompile Include="eval_env.cpp" />
     <ClCompile Include="forms.cpp" />
+    <ClCompile Include="io.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="parser.cpp" />
     <ClCompile Include="token.cpp" />
@@ -92,6 +93,7 @@
     <ClInclude Include="error.h" />
     <ClInclude Include="eval_env.h" />
     <ClInclude Include="forms.h" />
+    <ClInclude Include="io.h" />
     <ClInclude Include="parser.h" />
     <ClInclude Include="token.h" />
     <ClInclude Include="tokenizer.h" />
